--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,9 +12,9 @@
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                <ul class="navbar-nav mx-auto gap-3">
+                <ul class="navbar-nav mx-auto gap-3 ">
                     <li class="nav-item  ">
-                        <a class="nav-link eb-garamond" (click)="navigateAndCloseOffcanvas('')">Home</a>
+                        <a class="nav-link " (click)="navigateAndCloseOffcanvas('')">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" (click)="navigateAndCloseOffcanvas('/about')">Company</a>
