--- a/src/app/components/destination/destination.component.html
+++ b/src/app/components/destination/destination.component.html
@@ -30,14 +30,27 @@
     </button>
     
     <!-- Dropdown Button -->
-    <button class="btn btn-light dropdown-toggle" type="button">
-      Images
+    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown">
+      {{ searchMode }}
     </button>
+    <ul class="dropdown-menu">
+      <li><button class="dropdown-item" (click)="setSearchMode('Packages')">Packages</button></li>
+      <li><button class="dropdown-item" (click)="setSearchMode('Location')">Location</button></li>
+    </ul>
+    
   </div>
 </div>
 
 <!-- Display packages as cards -->
 <div class="container mt-5">
+  <div class="row">
+    <div class="col-12">
+      <p *ngIf="model">
+        <strong>{{ getPackageCount() }}</strong> packages found for {{ searchMode === 'Packages' ? model.country : model.location }}.
+      </p>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4" *ngFor="let pkg of filteredPackages">
       <div class="card" [routerLink]="['/package', pkg.id]">
@@ -46,7 +59,12 @@
         <div class="card-body d-flex flex-column">
           <div class="d-flex justify-content-between mb-2">
             <div class="d-flex align-items-center">
-              <p class="card-text mb-0"><small class="text-muted">{{ pkg.location }}, {{ pkg.country }}</small></p>
+              <p class="card-text mb-0">
+                <small class="text-muted">
+                  <span *ngIf="searchMode === 'Packages'">{{ pkg.country }}</span>
+                  <span *ngIf="searchMode === 'Location'">{{ pkg.location }}</span>
+                </small>
+              </p>
             </div>
             <div class="d-flex align-items-center">
               <p class="card-text mb-0"><strong>{{ pkg.tourtype }}</strong></p>
