--- a/src/app/components/destination/destination.component.html
+++ b/src/app/components/destination/destination.component.html
@@ -45,7 +45,9 @@
   <div class="row">
     <div class="col-12">
       <p *ngIf="model">
-        <strong>{{ getPackageCount() }}</strong> packages found for {{ searchMode === 'Packages' ? model.country : model.location }}.
+        <strong>{{ getPackageCount() }}</strong> packages found for 
+        <span *ngIf="searchMode === 'Packages'">{{ model.country }}</span>
+        <span *ngIf="searchMode === 'Location'">{{ model.location }}</span>
       </p>
     </div>
   </div>
@@ -59,9 +61,13 @@
           <div class="d-flex justify-content-between mb-3">
             <div class="d-flex align-items-center">
               <i class="fi fi-ts-marker me-2 mt-1"></i>                          
-              <p class="card-text mb-0 text-muted">
-                <span *ngIf="searchMode === 'Packages'">{{ pkg.country }}</span>
-                <span *ngIf="searchMode === 'Location'">{{ pkg.location }}</span>
+              <p class="card-text mb-0">
+                <span [ngClass]="{'text-muted': searchMode === 'Packages' && pkg.location}" class="me-2">
+                  {{ pkg.location }}
+                </span>
+                <span [ngClass]="{'text-muted': searchMode === 'Location' && pkg.country}">
+                  {{ pkg.country }}
+                </span>
               </p>
             </div>
             <div class="d-flex align-items-center">
